--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,4 @@ REACT_APP_BACKEND_URL=https://gamelegacyhub-1.preview.emergentagent.com
 WDS_SOCKET_PORT=443
 REACT_APP_ENABLE_VISUAL_EDITS=false
 ENABLE_HEALTH_CHECK=false
+PUBLIC_URL=/videogames-ll8gea
